// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a sub-title 1`] = `
<div
  class="feature__Container-sc-11dih5d-0 keJEFM"
>
  <h2
    class="feature__SubTitle-sc-11dih5d-2 fcnvjT"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature__Container-sc-11dih5d-0 keJEFM"
>
  <h1
    class="feature__Title-sc-11dih5d-1 kqRwfn"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-11dih5d-0 keJEFM"
>
  <h1
    class="feature__Title-sc-11dih5d-1 kqRwfn"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-11dih5d-2 fcnvjT"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
